Added convert position to viewport object

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,25 +24,19 @@
             android:value="face"/>
 
         <!-- TODO: SplashTheme -->
-        <activity
-            android:name=".welcome.SplashActivity"
-            android:noHistory="true"
-            android:theme="@style/AppTheme.SplashTheme"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan">
-            <intent-filter>
-
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-
-            </intent-filter>
-        </activity>
 
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
+        <intent-filter>
 
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+
+        </intent-filter>
+        </activity>
     </application>
 
 </manifest>
