--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:theme="@style/Theme.AppCompat"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
 
@@ -27,7 +28,7 @@
         <activity
             android:name=".welcome.SplashActivity"
             android:noHistory="true"
-            android:theme="@style/AppTheme.SplashTheme"
+            android:theme="@style/Theme.AppCompat"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
