--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:theme="@style/AppTheme"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
 
@@ -27,9 +28,14 @@
         <activity
             android:name=".welcome.SplashActivity"
             android:noHistory="true"
-            android:theme="@style/AppTheme.SplashTheme"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
+        </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
+
             <intent-filter>
 
                 <action android:name="android.intent.action.MAIN" />
@@ -37,11 +43,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
 
             </intent-filter>
-        </activity>
 
-        <activity
-            android:name=".MainActivity"
-            android:screenOrientation="portrait"/>
+        </activity>
 
     </application>
 
