--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
 
         <activity
             android:name=".MainActivity"
+            android:theme="@style/AppTheme"
             android:screenOrientation="portrait">
 
             <intent-filter>
